# sptam

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
configurationFiles/: tsukuba.yaml
scripts/: build.sh
src/ros/: base_driver.cpp  stereo_driver.cpp  stereo_driver.hpp
src/sptam/: BundleDriver.cpp  CMakeLists.txt  CameraParameters.hpp  MapMaker.cpp  MapMaker.hpp  StereoFrame.cpp  StereoFrame.hpp  sptam.cpp
src/sptam/utils/: CovisibilityGraph.cpp
src/standAlone/: KITTIGroundTruth.hpp
utils/docker/: Dockerfile  README.md  configure-env.sh  docker-compose.yml  dockerize.sh
